8203480: IncompatibleClassChangeError thrown at sites linked to default interface methods

Reviewed-by: kvn